[package]
name = "erun"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple rofi alternative written in Rust with egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applications = "0.2.3"
eframe = "0.27.0"
egui = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
icns = { version = "0.3.1" }
anyhow = "1.0.86"
ron = "0.8.1"

[profile.release]
debug = true
